# route.lw1.at

./: README.md  REUSE.toml  austria-latest.osm.pbf  config.yml  custom-tile-profile.lua  motis  openapi.yaml  pyproject.toml  tiles-profiles  ui
about-page/: Makefile  data.py  main.py  mapping.ini  watch.py
api_client/: Justfile
color-data/: .gitignore  README.md  REUSE.toml  color-export.py  import_ptna_table.py  load_gtfs.py  load_osm.py  load_vienna_stops.py  lua_export.py  manual-mapping.json  query.sql
datasets/: austria-260103.osm.pbf  austria-260104.osm.pbf  austria-260108.osm.pbf  austria-260111.osm.pbf  austria-260115.osm.pbf  austria-260122.osm.pbf  austria-260201.osm.pbf  austria-260207.osm.pbf  austria-260214.osm.pbf  austria-260226.osm.pbf  austria-260310.osm.pbf  austria-260320.osm.pbf  austria-260330.osm.pbf  austria-260409.osm.pbf  austria-260427.osm.pbf  austria-260507.osm.pbf  austria-260517.osm.pbf  austria-260528.osm.pbf  austria-260608.osm.pbf  austria-260614.osm.pbf  austria-260621.osm.pbf  austria-260627.osm.pbf  austria-latest.osm.pbf  config-sample-full.json
gbfs/: gbfs.json  gbfs.py
gtfs_rt_proxy/: README.md  REUSE.toml  api.py  conversion.py  line_to_gtfs_id_mapping.json  lineid_mapping.py  match_vienna_stops.py  server.py
hgt/: N48E016.hgt
import/: .gitignore  data.py  import.py
motis/: motis
motis-patches/: ui.patch
motis-release/: REUSE.toml  motis
other/: gbfs.py
own_gtfs/: create_gtfs.py  gtfs_data.py  ideas.md  other_data.py  schema.json
screenshots/: 2_url.txt  3_url.txt
scripts/: at.lua  color-data.lua  (+2 more)
(+395 files in other folders)
